--- a/package.json
+++ b/package.json
@@ -14,27 +14,32 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~10.0.5",
     "@angular/common": "~10.0.0",
+    "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@capacitor-community/http": "^0.2.1",
     "@capacitor/core": "2.4.5",
+    "@capacitor/ios": "^2.4.5",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/http": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cordova-plugin-advanced-http": "^3.1.0",
+    "cordova-plugin-file": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
     "typescript": "~3.9.5",
-    "@angular/cli": "~10.0.5",
-    "@angular/compiler": "~10.0.0"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
