--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jwt-decode": "^3.1.2",
     "morgan": "^1.10.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
