--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^5.2.11",
     "@angular/cli": "~10.0.5",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
@@ -36,6 +37,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "ionic-tooltips": "^3.1.0",
     "jwt-decode": "^3.1.2",
     "morgan": "^1.10.0",
     "rxjs": "~6.5.5",
