01/03/2021 modernized home page with a new dashboard page that renders the wordcloud

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "io.vocabbooster",
   "appName": "frontend",
   "bundledWebRuntime": false,
   "npmClient": "npm",
