--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "angular-tag-cloud-module": "^5.2.0",
     "body-parser": "^1.19.0",
     "cordova-plugin-advanced-http": "^3.1.0",
     "cordova-plugin-file": "^6.0.2",
@@ -39,6 +40,7 @@
     "express": "^4.17.1",
     "ionic-tooltips": "^3.1.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
