--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^10.2.5",
     "@angular/cdk": "^11.2.11",
     "@angular/cli": "~10.0.5",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
-    "@angular/platform-browser": "~10.0.0",
+    "@angular/platform-browser": "^10.2.5",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@capacitor-community/http": "^0.2.1",
